// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders LoginControl with LoginButton component 1`] = `
<LoginButton
  onClick={[Function]}
/>
`;

exports[`renders LoginControl with LogoutButton component 1`] = `
<LogoutButton
  onClick={[Function]}
/>
`;
